sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '(' expected but identifier found.
    if plusPetit(i+1:Int,i:Int) {
       ^AlgBubbleSort1:8: error: illegal start of simple expression
  }
  ^